修复构建问题

--- a/.builds/doc-build.yaml
+++ b/.builds/doc-build.yaml
@@ -118,4 +118,4 @@ spec:
             value: product-docs-build
       params:
         - name: doc-base
-          value: compliance-service
+          value: logging-service
