--- a/.builds/doc-pr-build.yaml
+++ b/.builds/doc-pr-build.yaml
@@ -38,4 +38,4 @@ spec:
             value: product-docs-pr-pipeline
       params:
         - name: doc-base
-          value: compliance-service
+          value: logging-service
